// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form
  onSubmit={[Function]}
  style={
    Object {
      "marginBottom": 30,
    }
  }
>
  <div
    aria-describedby="name-error-text"
    className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
      onBlur={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <label
        className="MuiFormLabel-root-10 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9"
        data-shrink={false}
        htmlFor={undefined}
      >
        Tipo
      </label>
      <div
        className="MuiInput-root-20 MuiInput-fullWidth-27 MuiInput-formControl-21 MuiInput-underline-24"
      >
        <div
          className="MuiSelect-root-15"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-16 MuiSelect-selectMenu-17 MuiInput-input-28"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203",
                }
              }
            />
          </div>
          <input
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            defaultValue={undefined}
            id={undefined}
            name="addressType"
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-33 MuiSelect-icon-19"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      className="MuiFormHelperText-root-43"
      id="name-error-text"
    />
  </div>
  <div
    label="Endereço com rua, número e complemento"
    name="streetAddress"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="Cidade"
    name="city"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="Estado"
    name="state"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="País"
    name="country"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="CEP"
    name="zipCode"
    type="text"
  />
  <div
    label="Telefone para contato"
    name="phoneNumber"
    type="text"
  />
  <div
    style={
      Object {
        "textAlign": "right",
      }
    }
  >
    <button
      className="MuiButtonBase-root-63 MuiButton-root-47 MuiButton-raised-53 MuiButton-raisedPrimary-54"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-48"
      >
        Adicionar endereço
      </span>
      <span
        className="MuiTouchRipple-root-66"
      />
    </button>
  </div>
  <div />
</form>
`;

exports[`with error renders correctly 1`] = `
<form
  onSubmit={[Function]}
  style={
    Object {
      "marginBottom": 30,
    }
  }
>
  <div
    aria-describedby="name-error-text"
    className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
      onBlur={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <label
        className="MuiFormLabel-root-10 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9"
        data-shrink={false}
        htmlFor={undefined}
      >
        Tipo
      </label>
      <div
        className="MuiInput-root-20 MuiInput-fullWidth-27 MuiInput-formControl-21 MuiInput-underline-24"
      >
        <div
          className="MuiSelect-root-15"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-16 MuiSelect-selectMenu-17 MuiInput-input-28"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203",
                }
              }
            />
          </div>
          <input
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            defaultValue={undefined}
            id={undefined}
            name="addressType"
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-33 MuiSelect-icon-19"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      className="MuiFormHelperText-root-43"
      id="name-error-text"
    />
  </div>
  <div
    label="Endereço com rua, número e complemento"
    name="streetAddress"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="Cidade"
    name="city"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="Estado"
    name="state"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="País"
    name="country"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="CEP"
    name="zipCode"
    type="text"
  />
  <div
    label="Telefone para contato"
    name="phoneNumber"
    type="text"
  />
  <div
    style={
      Object {
        "textAlign": "right",
      }
    }
  >
    <button
      className="MuiButtonBase-root-63 MuiButton-root-47 MuiButton-raised-53 MuiButton-raisedPrimary-54"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-48"
      >
        Adicionar endereço
      </span>
      <span
        className="MuiTouchRipple-root-66"
      />
    </button>
  </div>
  <div>
    foo error
  </div>
</form>
`;
